added comment to and renamed preprocessing_modeling

--- a/preprocessing_modeling_experimentation.ipynb
+++ b/preprocessing_modeling_experimentation.ipynb
@@ -1269,6 +1269,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "As we can see in the plot above, age is the biggest factor in predicting churn, followed by NumOfProducts. This is to be expected given that we saw them as having the highest correlation with the target variable in the analysis notebook."
+      ],
+      "metadata": {
+        "id": "qIiaz_QfMD0G"
+      },
+      "id": "qIiaz_QfMD0G"
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
