updated code with fix

--- a/ModelCICD.ipynb
+++ b/ModelCICD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "21ee9af6-831e-4fae-974f-86ae3845743a",
    "metadata": {
     "tags": []
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "254f8fa8-2a7d-4d25-8e08-4246acd6049f",
    "metadata": {
     "tags": []
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "208798f2-ceda-407b-b46d-a6df88586c75",
    "metadata": {
     "tags": []
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9e7d521a-e87c-4690-928d-0c54cd16d37a",
    "metadata": {
     "tags": []
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "37b478d4-60c6-40c0-947f-5ba550f37635",
    "metadata": {
     "tags": []
@@ -145,8 +145,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "s3://sagemaker-us-east-1-994366592132/churnmodeling-2024-02-17-2057/Churn_Modelling.xls\n",
-      "CPU times: user 129 ms, sys: 47.1 ms, total: 176 ms\n",
+      "s3://sagemaker-us-east-1-994366592132/churnmodeling-2024-02-18-0118/Churn_Modelling.xls\n",
+      "CPU times: user 188 ms, sys: 30 ms, total: 218 ms\n",
       "Wall time: 400 ms\n"
      ]
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "fa7cd4ea-447a-4930-adbe-69ba1c333f2e",
    "metadata": {
     "tags": []
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "66979cf4-e48b-4ae1-b2f7-08334cc39d39",
    "metadata": {
     "tags": []
@@ -219,7 +219,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "s3://sagemaker-us-east-1-994366592132/churnmodeling-2024-02-17-2057/batch_data1.csv\n"
+      "s3://sagemaker-us-east-1-994366592132/churnmodeling-2024-02-18-0118/batch_data1.csv\n"
      ]
     }
    ],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "4f3acf33-1351-4743-bc3c-b539618380d2",
    "metadata": {
     "tags": []
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "5e3a9bdd-ddfb-4969-831e-d28f6bae4cb3",
    "metadata": {
     "tags": []
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "148af68d-9730-4a41-ae56-793c1670a353",
    "metadata": {
     "tags": []
@@ -312,7 +312,7 @@
     "    base_dir = \"/opt/ml/processing\"\n",
     "\n",
     "    # Load the original data\n",
-    "    df = pd.read_csv(f\"{base_dir}/Churn_Modelling.xls'\")\n",
+    "    df = pd.read_csv(f\"{base_dir}/input/Churn_Modelling.xls\")\n",
     "\n",
     "    # Rename columns for clarity\n",
     "    df.columns = ['RowNumber', 'CustomerID', 'Surname', 'CreditScore', 'Geography', 'Gender', 'Age', 'Tenure',\n",
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "2fbc02fe-f009-4d59-9c97-91f1936aafa7",
    "metadata": {},
    "outputs": [],
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "af0b71b5-50b9-4b94-89a3-8c14140e5459",
    "metadata": {},
    "outputs": [
@@ -416,16 +416,7 @@
    "execution_count": 14,
    "id": "e865a671-7619-4229-b80c-56e0485aebb1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.10/site-packages/sagemaker/workflow/pipeline_context.py:332: UserWarning: Running within a PipelineSession, there will be No Wait, No Logs, and No Job being started.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sagemaker.estimator import Estimator\n",
     "from sagemaker.inputs import TrainingInput\n",
@@ -905,10 +896,10 @@
        "   'DefaultValue': 'PendingManualApproval'},\n",
        "  {'Name': 'InputData',\n",
        "   'Type': 'String',\n",
-       "   'DefaultValue': 's3://sagemaker-us-east-1-994366592132/churnmodeling-2024-02-17-2057/Churn_Modelling.xls'},\n",
+       "   'DefaultValue': 's3://sagemaker-us-east-1-994366592132/churnmodeling-2024-02-18-0118/Churn_Modelling.xls'},\n",
        "  {'Name': 'BatchData',\n",
        "   'Type': 'String',\n",
-       "   'DefaultValue': 's3://sagemaker-us-east-1-994366592132/churnmodeling-2024-02-17-2057/batch_data1.csv'},\n",
+       "   'DefaultValue': 's3://sagemaker-us-east-1-994366592132/churnmodeling-2024-02-18-0118/batch_data1.csv'},\n",
        "  {'Name': 'MseThreshold', 'Type': 'Float', 'DefaultValue': 6.0}],\n",
        " 'PipelineExperimentConfig': {'ExperimentName': {'Get': 'Execution.PipelineName'},\n",
        "  'TrialName': {'Get': 'Execution.PipelineExecutionId'}},\n",
@@ -931,7 +922,7 @@
        "       'S3CompressionType': 'None'}},\n",
        "     {'InputName': 'code',\n",
        "      'AppManaged': False,\n",
-       "      'S3Input': {'S3Uri': 's3://sagemaker-us-east-1-994366592132/BankChurnPipeline/code/4792e42cf2c39c0534214f396547f5e4/preprocessing.py',\n",
+       "      'S3Input': {'S3Uri': 's3://sagemaker-us-east-1-994366592132/BankChurnPipeline/code/a277c89b550597d865fd281767a3f97c/preprocessing.py',\n",
        "       'LocalPath': '/opt/ml/processing/input/code',\n",
        "       'S3DataType': 'S3Prefix',\n",
        "       'S3InputMode': 'File',\n",
@@ -1039,7 +1030,7 @@
        "       'S3CompressionType': 'None'}}],\n",
        "    'ProcessingOutputConfig': {'Outputs': [{'OutputName': 'evaluation',\n",
        "       'AppManaged': False,\n",
-       "       'S3Output': {'S3Uri': 's3://sagemaker-us-east-1-994366592132/script-abalone-eval-2024-02-17-20-57-06-382/output/evaluation',\n",
+       "       'S3Output': {'S3Uri': 's3://sagemaker-us-east-1-994366592132/script-abalone-eval-2024-02-18-01-19-01-604/output/evaluation',\n",
        "        'LocalPath': '/opt/ml/processing/evaluation',\n",
        "        'S3UploadMode': 'EndOfJob'}}]}},\n",
        "   'PropertyFiles': [{'PropertyFileName': 'EvaluationReport',\n",
@@ -1055,7 +1046,7 @@
        "      'Type': 'RegisterModel',\n",
        "      'Arguments': {'ModelPackageGroupName': 'AbaloneModelPackageGroupName',\n",
        "       'ModelMetrics': {'ModelQuality': {'Statistics': {'ContentType': 'application/json',\n",
-       "          'S3Uri': 's3://sagemaker-us-east-1-994366592132/script-abalone-eval-2024-02-17-20-57-06-382/output/evaluation/evaluation.json'}},\n",
+       "          'S3Uri': 's3://sagemaker-us-east-1-994366592132/script-abalone-eval-2024-02-18-01-19-01-604/output/evaluation/evaluation.json'}},\n",
        "        'Bias': {},\n",
        "        'Explainability': {}},\n",
        "       'InferenceSpecification': {'Containers': [{'Image': '683313688378.dkr.ecr.us-east-1.amazonaws.com/sagemaker-xgboost:1.0-1-cpu-py3',\n",
@@ -1132,12 +1123,12 @@
      "data": {
       "text/plain": [
        "{'PipelineArn': 'arn:aws:sagemaker:us-east-1:994366592132:pipeline/BankChurnPipeline',\n",
-       " 'ResponseMetadata': {'RequestId': 'ad6ba623-4150-4b2f-b26e-444253bd1a0b',\n",
+       " 'ResponseMetadata': {'RequestId': 'bd1b0e46-b714-46e4-b256-dabb76f309e2',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': 'ad6ba623-4150-4b2f-b26e-444253bd1a0b',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': 'bd1b0e46-b714-46e4-b256-dabb76f309e2',\n",
        "   'content-type': 'application/x-amz-json-1.1',\n",
        "   'content-length': '85',\n",
-       "   'date': 'Sat, 17 Feb 2024 20:57:08 GMT'},\n",
+       "   'date': 'Sun, 18 Feb 2024 01:19:04 GMT'},\n",
        "  'RetryAttempts': 0}}"
       ]
      },
@@ -1174,23 +1165,23 @@
      "data": {
       "text/plain": [
        "{'PipelineArn': 'arn:aws:sagemaker:us-east-1:994366592132:pipeline/BankChurnPipeline',\n",
-       " 'PipelineExecutionArn': 'arn:aws:sagemaker:us-east-1:994366592132:pipeline/BankChurnPipeline/execution/39iwg8p0jeiz',\n",
-       " 'PipelineExecutionDisplayName': 'execution-1708203428308',\n",
+       " 'PipelineExecutionArn': 'arn:aws:sagemaker:us-east-1:994366592132:pipeline/BankChurnPipeline/execution/8b0ux40zfu59',\n",
+       " 'PipelineExecutionDisplayName': 'execution-1708219144399',\n",
        " 'PipelineExecutionStatus': 'Executing',\n",
-       " 'CreationTime': datetime.datetime(2024, 2, 17, 20, 57, 8, 190000, tzinfo=tzlocal()),\n",
-       " 'LastModifiedTime': datetime.datetime(2024, 2, 17, 20, 57, 8, 190000, tzinfo=tzlocal()),\n",
+       " 'CreationTime': datetime.datetime(2024, 2, 18, 1, 19, 4, 336000, tzinfo=tzlocal()),\n",
+       " 'LastModifiedTime': datetime.datetime(2024, 2, 18, 1, 19, 4, 336000, tzinfo=tzlocal()),\n",
        " 'CreatedBy': {'UserProfileArn': 'arn:aws:sagemaker:us-east-1:994366592132:user-profile/d-vsc45uz8z5fz/abdulshariqusd',\n",
        "  'UserProfileName': 'abdulshariqusd',\n",
        "  'DomainId': 'd-vsc45uz8z5fz'},\n",
        " 'LastModifiedBy': {'UserProfileArn': 'arn:aws:sagemaker:us-east-1:994366592132:user-profile/d-vsc45uz8z5fz/abdulshariqusd',\n",
        "  'UserProfileName': 'abdulshariqusd',\n",
        "  'DomainId': 'd-vsc45uz8z5fz'},\n",
-       " 'ResponseMetadata': {'RequestId': 'e53f1b54-5978-49b8-914d-2f6725633fdb',\n",
+       " 'ResponseMetadata': {'RequestId': '54060f17-ccbf-4091-ba43-82e1754388d7',\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'x-amzn-requestid': 'e53f1b54-5978-49b8-914d-2f6725633fdb',\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': '54060f17-ccbf-4091-ba43-82e1754388d7',\n",
        "   'content-type': 'application/x-amz-json-1.1',\n",
-       "   'content-length': '727',\n",
-       "   'date': 'Sat, 17 Feb 2024 20:57:08 GMT'},\n",
+       "   'content-length': '729',\n",
+       "   'date': 'Sun, 18 Feb 2024 01:19:04 GMT'},\n",
        "  'RetryAttempts': 0}}"
       ]
      },
@@ -1205,12 +1196,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "4cc1978d-6016-49cc-913a-2de3e754d83a",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "WaiterError",
+     "evalue": "Waiter PipelineExecutionComplete failed: Waiter encountered a terminal failure state: For expression \"PipelineExecutionStatus\" we matched expected path: \"Failed\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mWaiterError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[31], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mexecution\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/sagemaker/workflow/pipeline.py:957\u001b[0m, in \u001b[0;36m_PipelineExecution.wait\u001b[0;34m(self, delay, max_attempts)\u001b[0m\n\u001b[1;32m    928\u001b[0m model \u001b[38;5;241m=\u001b[39m botocore\u001b[38;5;241m.\u001b[39mwaiter\u001b[38;5;241m.\u001b[39mWaiterModel(\n\u001b[1;32m    929\u001b[0m     {\n\u001b[1;32m    930\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mversion\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m2\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    952\u001b[0m     }\n\u001b[1;32m    953\u001b[0m )\n\u001b[1;32m    954\u001b[0m waiter \u001b[38;5;241m=\u001b[39m botocore\u001b[38;5;241m.\u001b[39mwaiter\u001b[38;5;241m.\u001b[39mcreate_waiter_with_client(\n\u001b[1;32m    955\u001b[0m     waiter_id, model, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msagemaker_session\u001b[38;5;241m.\u001b[39msagemaker_client\n\u001b[1;32m    956\u001b[0m )\n\u001b[0;32m--> 957\u001b[0m \u001b[43mwaiter\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43mPipelineExecutionArn\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43marn\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/botocore/waiter.py:55\u001b[0m, in \u001b[0;36mcreate_waiter_with_client.<locals>.wait\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m     54\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwait\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m---> 55\u001b[0m     \u001b[43mWaiter\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/conda/lib/python3.10/site-packages/botocore/waiter.py:375\u001b[0m, in \u001b[0;36mWaiter.wait\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m    371\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m current_state \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfailure\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[1;32m    372\u001b[0m     reason \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mWaiter encountered a terminal failure state: \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m%\u001b[39m (\n\u001b[1;32m    373\u001b[0m         acceptor\u001b[38;5;241m.\u001b[39mexplanation\n\u001b[1;32m    374\u001b[0m     )\n\u001b[0;32m--> 375\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m WaiterError(\n\u001b[1;32m    376\u001b[0m         name\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mname,\n\u001b[1;32m    377\u001b[0m         reason\u001b[38;5;241m=\u001b[39mreason,\n\u001b[1;32m    378\u001b[0m         last_response\u001b[38;5;241m=\u001b[39mresponse,\n\u001b[1;32m    379\u001b[0m     )\n\u001b[1;32m    380\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m num_attempts \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m max_attempts:\n\u001b[1;32m    381\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m last_matched_acceptor \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "\u001b[0;31mWaiterError\u001b[0m: Waiter PipelineExecutionComplete failed: Waiter encountered a terminal failure state: For expression \"PipelineExecutionStatus\" we matched expected path: \"Failed\""
+     ]
+    }
+   ],
    "source": [
     "execution.wait()"
    ]
