Added pipeline deisgn diagram

--- a/ModelCICD.ipynb
+++ b/ModelCICD.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "6c432a39-9ca4-49c7-b184-8761fa14d066",
+   "metadata": {},
+   "source": [
+    "Develop a CICD pipeline with the following architecture"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "428c30ad-84e4-4066-8323-76aa73ed1c17",
+   "metadata": {},
+   "source": [
+    "<img src=\"./pictures/pipeline-design.png\" />"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "2688ce9a-a14a-4a2f-8633-91930287696c",
